[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/theme_1.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/back_button.png" type="Texture" id=3]
[ext_resource path="res://src/screens/log_in_module/forgot_password/forgot_password.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/red_cancel.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/black_cancel.png" type="Texture" id=6]



[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.33484
margin_top = 1.33484
margin_right = -1.33484
margin_bottom = 1.33484
color = Color( 0.188235, 0.164706, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="elements" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -267.823
margin_right = 280.0
margin_bottom = -179.823
custom_fonts/font = SubResource( 1 )
text = "Forgot My Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -452.232
margin_top = -22.0
margin_right = -119.232
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "Enter Email Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.2459
margin_top = -30.0
margin_right = 351.754
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.5
margin_top = 138.964
margin_right = 64.5
margin_bottom = 222.964
theme = ExtResource( 2 )
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="elements"]
scale = Vector2( 0.244, 0.244 )
normal = ExtResource( 3 )

[node name="HTTPRequest" type="HTTPRequest" parent="elements"]

[node name="error_msg_area" type="ColorRect" parent="elements"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -269.0
margin_top = -141.0
margin_right = 269.0
margin_bottom = 141.0
color = Color( 0.898039, 0.168627, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="elements/error_msg_area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.0
margin_top = -22.0
margin_right = 227.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "Sorry. No such Email Exists."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_exit_button" type="TouchScreenButton" parent="elements/error_msg_area"]
position = Vector2( 476.839, -35.6299 )
scale = Vector2( 0.175552, 0.175552 )
normal = ExtResource( 6 )

[node name="success_msg_area" type="ColorRect" parent="elements"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -269.0
margin_top = -141.0
margin_right = 269.0
margin_bottom = 141.0
color = Color( 0.211765, 0.819608, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="elements/success_msg_area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.5
margin_top = -22.0
margin_right = 225.5
margin_bottom = 22.0
custom_fonts/font = SubResource( 5 )
text = "Password Reset Email Sent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="success_exit_button" type="TouchScreenButton" parent="elements/success_msg_area"]
position = Vector2( 476.839, -35.63 )
scale = Vector2( 0.178159, 0.178159 )
normal = ExtResource( 5 )

[node name="loading" type="ColorRect" parent="elements"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -269.0
margin_top = -141.0
margin_right = 269.0
margin_bottom = 141.0
color = Color( 0.980392, 0.921569, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="elements/loading"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -22.0
margin_right = 94.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 5 )
text = "LOADING..."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="elements/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="button_up" from="elements/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="elements/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="request_completed" from="elements/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="elements/error_msg_area/error_exit_button" to="." method="_on_error_exit_button_pressed"]
[connection signal="pressed" from="elements/success_msg_area/success_exit_button" to="." method="_on_success_exit_button_pressed"]
